fix: wrong styling for dark mode => force light mode

--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,7 @@
 	line-height: 1.5;
 	font-weight: 400;
 
-	color-scheme: light dark;
+	color-scheme: light;
 	color: rgba(255, 255, 255, 0.87);
 	background-color: #242424;
 
@@ -11,6 +11,12 @@
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+}
+
+@media (prefers-color-scheme: dark) {
+	:root {
+		color-scheme: light;
+	}
 }
 
 a {
@@ -43,18 +49,7 @@ body {
 	padding: 0;
 	height: 100%;
 	width: 100%;
-	overflow-x: hidden;
-	/* 🔒 kein horizontaler Scroll */
-	background-color: hsla(190, 0%, 93%, 1);
-	background-image:
-		radial-gradient(at 49% 50%, hsla(66, 77%, 94%, 1) 0px, transparent 50%),
-		radial-gradient(at 27% 49%, hsla(38, 91%, 92%, 1) 0px, transparent 50%),
-		radial-gradient(at 92% 10%, hsla(22, 100%, 94%, 1) 0px, transparent 50%),
-		radial-gradient(at 6% 10%, hsla(75, 100%, 97%, 1) 0px, transparent 50%),
-		radial-gradient(at 6% 90%, hsla(22, 100%, 96%, 1) 0px, transparent 50%),
-		radial-gradient(at 93% 96%, hsla(69, 100%, 96%, 1) 0px, transparent 50%),
-		radial-gradient(at 65% 38%, hsla(194, 79%, 93%, 1) 0px, transparent 50%),
-		radial-gradient(at 86% 41%, hsla(22, 81%, 93%, 1) 0px, transparent 50%);
+
 }
 
 h1 {
@@ -89,8 +84,8 @@ button:focus-visible {
 
 #app {
 	max-width: 2000px;
-	margin: 0 auto;
-	padding: 1rem;
+	margin: 0 0;
+	padding: 0;
 	text-align: left;
 }
 
